--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "typesdk": "^1.7.4"
   }
 }
